--- a/public/css/main.css
+++ b/public/css/main.css
@@ -441,13 +441,100 @@ textarea {
   margin-top: 0px; }
 
 .thermo-splash {
-  height: 90vh;
+  height: 80vh;
   transform: translateY(-30%);
   background: url("/images/p-img/Thermo-Splash-Bg.jpg");
-  background-size: cover; }
+  background-position: center;
+  background-size: cover;
+  position: relative; }
+
+.model-cont {
+  position: absolute;
+  margin-top: 0px;
+  transform: translate(0%, -115%); }
+
+.model {
+  width: 150%;
+  float: left;
+  transform: translate(-40%, 0%); }
+
+.splash-txt {
+  width: 100%;
+  line-height: 20px !important;
+  margin-bottom: 30px;
+  transform: translateY(-50%);
+  font-size: .8rem; }
+
+.ui {
+  margin: 10px;
+  padding-top: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 4px 10px 20px -6px #777;
+  -moz-box-shadow: 4px 10px 20px -6px #777;
+  box-shadow: 4px 10px 20px -6px #777; }
+
+.vr {
+  width: 1px;
+  height: 15%;
+  left: 50%;
+  background-color: #707070; }
+
+.ui-img {
+  width: 100%;
+  margin-bottom: 30px; }
+
+.ui-txt {
+  margin-bottom: 30px; }
+
+.ui-txt p {
+  font-size: .8rem; }
+
+.sketch {
+  margin: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 4px 10px 20px -6px #777;
+  -moz-box-shadow: 4px 10px 20px -6px #777;
+  box-shadow: 4px 10px 20px -6px #777; }
+
+.sketch-img {
+  width: 80%; }
+
+.logo-txt p {
+  font-size: .8rem; }
+
+.logo-cont {
+  margin-top: 30px; }
+
+.sheet {
+  margin: 10px;
+  padding-bottom: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 4px 10px 20px -6px #777;
+  -moz-box-shadow: 4px 10px 20px -6px #777;
+  box-shadow: 4px 10px 20px -6px #777; }
+
+.final-logo {
+  width: 80%; }
+
+.sheet-cont {
+  margin-top: 50px; }
+
+.sheet-cont p {
+  font-size: .8rem; }
+
+.sell-sheet {
+  width: 100%;
+  -webkit-box-shadow: 4px 10px 20px -6px #777;
+  -moz-box-shadow: 4px 10px 20px -6px #777;
+  box-shadow: 4px 10px 20px -6px #777; }
 
 .thermo-footer {
-  flex-shrink: 0; }
+  flex-shrink: 0;
+  clear: both;
+  position: relative;
+  margin-top: 200px; }
 
 .error-section {
   width: 50%;
@@ -1007,8 +1094,8 @@ button {
     bottom: 0; }
 
   .form-cont {
-    transform: translateY(40%);
-    height: 50%;
+    transform: translateY(30%);
+    height: 65%;
     position: relative;
     clear: both;
     margin-bottom: 50px; }
@@ -1029,7 +1116,79 @@ button {
     position: relative; }
 
   .submit-button {
-    width: 100px; } }
+    width: 100px; }
+
+  .model-cont {
+    position: absolute;
+    margin-top: 0px;
+    transform: translate(-18%, -80%);
+    clear: none; }
+
+  .model {
+    width: 100%; }
+
+  .splash-txt {
+    width: 55%;
+    float: right;
+    transform: translateY(-110%) !important;
+    font-size: 1rem; }
+
+  .splash-txt p {
+    line-height: 25px;
+    font-size: .8rem; }
+
+  .ui {
+    clear: both; }
+
+  .ui-img {
+    width: 50%;
+    float: right; }
+
+  .ui-txt p {
+    font-size: .8rem;
+    width: 90%;
+    transform: translateY(30%); }
+
+  .sketch-cont {
+    float: left;
+    margin-top: 30px;
+    text-align: center; }
+
+  .sketch-img {
+    width: 80%; }
+
+  .logo-txt {
+    text-align: center;
+    width: 80%; }
+
+  .logo-txt p {
+    font-size: .8rem;
+    transform: translateY(0%); }
+
+  .final-logo {
+    width: 60%;
+    margin-top: 10px;
+    margin-bottom: 20px; }
+
+  .sheet-cont {
+    margin-top: 50px; }
+
+  .sheet-cont p {
+    font-size: 1rem; }
+
+  .sheet-cont {
+    text-align: center; }
+
+  .sell-sheet {
+    width: 70%;
+    margin-bottom: 20px;
+    -webkit-box-shadow: 4px 10px 20px -6px #777;
+    -moz-box-shadow: 4px 10px 20px -6px #777;
+    box-shadow: 4px 10px 20px -6px #777; }
+
+  .vr {
+    margin-top: 30px;
+    margin-bottom: 30px; } }
 @media (min-width: 980px) {
   .splash-txt {
     line-height: 10px; }
@@ -1110,7 +1269,76 @@ button {
 
   footer {
     margin-top: 50px;
-    position: relative; } }
+    position: relative; }
+
+  .model-cont {
+    position: absolute;
+    margin-top: 0px;
+    transform: translate(-18%, -80%);
+    clear: none; }
+
+  .model {
+    width: 130%; }
+
+  .splash-txt {
+    width: 50%;
+    float: right;
+    transform: translateY(-130%) !important;
+    font-size: 1rem; }
+
+  .splash-txt p {
+    line-height: 25px; }
+
+  .ui {
+    clear: both; }
+
+  .ui-img {
+    width: 50%;
+    float: right; }
+
+  .ui-txt p {
+    font-size: 1rem;
+    margin-right: 20px;
+    transform: translateY(30%); }
+
+  .sketch-cont {
+    float: left;
+    margin-top: 30px; }
+
+  .sketch-img {
+    width: 80%; }
+
+  .logo-txt {
+    float: right;
+    width: 50%; }
+
+  .logo-txt p {
+    font-size: 1rem;
+    transform: translateY(80%); }
+
+  .final-logo {
+    width: 60%;
+    margin-top: 140px; }
+
+  .sheet-cont {
+    margin-top: 50px; }
+
+  .sheet-cont p {
+    font-size: 1rem; }
+
+  .sheet-cont {
+    text-align: center; }
+
+  .sell-sheet {
+    width: 70%;
+    margin-bottom: 20px;
+    -webkit-box-shadow: 4px 10px 20px -6px #777;
+    -moz-box-shadow: 4px 10px 20px -6px #777;
+    box-shadow: 4px 10px 20px -6px #777; }
+
+  .vr {
+    margin-top: 30px;
+    margin-bottom: 30px; } }
 @media (min-width: 1024px) {
   body {
     overflow-x: hidden; }
@@ -1204,10 +1432,14 @@ button {
     height: 15vh; }
 
   .form-cont {
-    width: 60%; }
+    width: 60%;
+    height: 55%; }
 
   .cont-header {
-    width: 35%; } }
+    width: 35%; }
+
+  .submit-button {
+    margin-bottom: 20px; } }
 @media (min-width: 1200px) {
   body {
     overflow-x: hidden; }
@@ -1442,7 +1674,16 @@ button {
     height: 10vh; }
 
   .error-section {
-    width: 50%; } }
+    width: 50%; }
+
+  .splash-txt p {
+    font-size: 1rem; }
+
+  .ui-txt p {
+    margin-left: 0px; }
+
+  .logo-txt {
+    text-align: left; } }
 @media (min-width: 1920px) {
   body {
     overflow-x: hidden; }
