--- a/public/css/main.css
+++ b/public/css/main.css
@@ -458,7 +458,7 @@ textarea {
   float: left;
   transform: translate(-40%, 0%); }
 
-.splash-txt {
+.thermo-splash-txt {
   width: 100%;
   line-height: 20px !important;
   margin-bottom: 30px;
@@ -536,6 +536,59 @@ textarea {
   position: relative;
   margin-top: 200px; }
 
+.biotec-splash {
+  height: 80vh;
+  background-image: linear-gradient(to top right, #08393B, #79B3B7);
+  -moz-transform: scale(1.5) skew(0deg, -16deg);
+  -webkit-transform: scale(1.5) skew(0deg, -16deg);
+  -o-transform: scale(1.5) skew(0deg, -16deg);
+  -ms-transform: scale(1.5) skew(0deg, -16deg);
+  transform: scale(1.5) skew(0deg, -16deg);
+  text-align: center; }
+
+.splash-content {
+  transform: translateY(-120%);
+  text-align: center; }
+
+.biotic-logo {
+  width: 100%; }
+
+.biotec-mock {
+  width: 100%; }
+
+.merch-cont {
+  text-align: center; }
+
+.merch-cont img {
+  width: 110%;
+  transform: translateY(-100%);
+  margin-bottom: 0px; }
+
+.proj-desc {
+  transform: translateY(-75%); }
+
+.biotec-section2 {
+  height: 80vh;
+  background-image: linear-gradient(to top right, #08393B, #fff);
+  -moz-transform: scale(1.5) skew(0deg, -16deg);
+  -webkit-transform: scale(1.5) skew(0deg, -16deg);
+  -o-transform: scale(1.5) skew(0deg, -16deg);
+  -ms-transform: scale(1.5) skew(0deg, -16deg);
+  transform: scale(1.5) skew(0deg, -16deg);
+  text-align: center; }
+
+.biotec-section2 img {
+  transform: skew(0deg, 16deg) !important;
+  display: block;
+  width: 110%;
+  margin-top: 25px; }
+
+.biotec-footer {
+  flex-shrink: 0;
+  clear: both;
+  position: relative;
+  margin-top: 200px; }
+
 .error-section {
   width: 50%;
   background-color: white;
@@ -571,9 +624,6 @@ textarea {
 @font-face {
   font-family: 'Made Saonara', serif;
   src: url("fonts/made-saonara/MADE SAONARA PERSONAL USE.otf") format(otf); }
-html {
-  min-height: 100%; }
-
 html, body {
   font-family: 'Manrope', sans-serif;
   height: 100%;
@@ -636,7 +686,7 @@ nav a:hover {
   100% {
     transform: translateY(0px); } }
 .splash h1 {
-  margin-top: 20px;
+  margin-top: 40px;
   font-size: 2rem; }
 
 .type-cursor {
@@ -850,7 +900,61 @@ button {
 
   .wave-mock {
     transform: translate(-5%, 40%);
-    width: 100%; } }
+    width: 100%; }
+
+  .biotec-splash {
+    height: 100vh;
+    background-image: linear-gradient(to top right, #08393B, #79B3B7);
+    -moz-transform: scale(1.5) skew(0deg, -16deg);
+    -webkit-transform: scale(1.5) skew(0deg, -16deg);
+    -o-transform: scale(1.5) skew(0deg, -16deg);
+    -ms-transform: scale(1.5) skew(0deg, -16deg);
+    transform: scale(1.5) skew(0deg, -16deg);
+    text-align: center; }
+
+  .splash-content {
+    transform: translateY(-120%);
+    text-align: center; }
+
+  .biotec-logo {
+    width: 90%; }
+
+  .biotec-mock {
+    width: 100%; }
+
+  .merch-cont {
+    text-align: center;
+    height: 20%; }
+
+  .merch-cont img {
+    width: 110%;
+    transform: translateY(-110%);
+    margin-bottom: 0px; }
+
+  .proj-desc {
+    height: 30%; }
+
+  .biotec-section2 {
+    height: 100%;
+    background-image: linear-gradient(to top right, #08393B, #fff);
+    -moz-transform: scale(1.5) skew(0deg, -16deg);
+    -webkit-transform: scale(1.5) skew(0deg, -16deg);
+    -o-transform: scale(1.5) skew(0deg, -16deg);
+    -ms-transform: scale(1.5) skew(0deg, -16deg);
+    transform: scale(1.5) skew(0deg, -16deg);
+    text-align: center; }
+
+  .biotec-section2 img {
+    transform: skew(0deg, 16deg) !important;
+    display: block;
+    width: 110%;
+    margin-top: 25px; }
+
+  .biotec-footer {
+    flex-shrink: 0;
+    clear: both;
+    position: relative;
+    margin-top: 200px; } }
 .burger-expand {
   transform: translateX(5%); }
 
@@ -1127,13 +1231,13 @@ button {
   .model {
     width: 100%; }
 
-  .splash-txt {
-    width: 55%;
+  .thermo-splash-txt {
+    width: 50%;
     float: right;
     transform: translateY(-110%) !important;
     font-size: 1rem; }
 
-  .splash-txt p {
+  .thermo-splash-txt p {
     line-height: 25px;
     font-size: .8rem; }
 
@@ -1188,7 +1292,74 @@ button {
 
   .vr {
     margin-top: 30px;
-    margin-bottom: 30px; } }
+    margin-bottom: 30px; }
+
+  .biotec-splash {
+    height: 70vh;
+    background-image: linear-gradient(to top right, #08393B, #79B3B7);
+    -moz-transform: scale(2.5) skew(0deg, -14deg);
+    -webkit-transform: scale(2.5) skew(0deg, -14deg);
+    -o-transform: scale(2.5) skew(0deg, -14deg);
+    -ms-transform: scale(2.5) skew(0deg, -14deg);
+    transform: scale(2.5) skew(0deg, -14deg); }
+
+  .splash-content {
+    transform: translateY(-80%);
+    display: flex; }
+
+  .biotec-logo-cont {
+    width: 100%; }
+
+  .biotic-logo {
+    width: 60%; }
+
+  .biotec-splash-img {
+    width: 60%; }
+
+  .biotec-mock {
+    width: 100%;
+    display: inline-block; }
+
+  .merch-cont {
+    width: 50%;
+    text-align: center;
+    float: left; }
+
+  .merch-cont img {
+    width: 100%;
+    transform: translateY(-70%);
+    float: left; }
+
+  .proj-desc {
+    transform: translateY(-175%);
+    width: 50%;
+    float: right; }
+
+  .proj-desc p {
+    font-size: .8rem; }
+
+  .biotec-section2 {
+    margin-top: 80px;
+    margin-bottom: 0px;
+    padding-top: 20px;
+    height: 100%;
+    background-image: linear-gradient(to top right, #08393B, #fff);
+    -moz-transform: scale(1.5) skew(0deg, -14deg);
+    -webkit-transform: scale(1.5) skew(0deg, -14deg);
+    -o-transform: scale(1.5) skew(0deg, -14deg);
+    -ms-transform: scale(1.5) skew(0deg, -14deg);
+    transform: scale(1.5) skew(0deg, -14deg);
+    text-align: center; }
+
+  .biotec-section2 img {
+    transform: skew(0deg, 14deg) !important;
+    display: block;
+    width: 50%;
+    margin-top: 25px; }
+
+  .biotec-footer {
+    position: relative;
+    overflow: hidden; } }
 @media (min-width: 980px) {
   .splash-txt {
     line-height: 10px; }
@@ -1280,13 +1451,13 @@ button {
   .model {
     width: 130%; }
 
-  .splash-txt {
+  .thermo-splash-txt {
     width: 50%;
     float: right;
     transform: translateY(-130%) !important;
     font-size: 1rem; }
 
-  .splash-txt p {
+  .thermo-splash-txt p {
     line-height: 25px; }
 
   .ui {
@@ -1338,7 +1509,74 @@ button {
 
   .vr {
     margin-top: 30px;
-    margin-bottom: 30px; } }
+    margin-bottom: 30px; }
+
+  .biotec-splash {
+    height: 70vh;
+    background-image: linear-gradient(to top right, #08393B, #79B3B7);
+    -moz-transform: scale(2.5) skew(0deg, -14deg);
+    -webkit-transform: scale(2.5) skew(0deg, -14deg);
+    -o-transform: scale(2.5) skew(0deg, -14deg);
+    -ms-transform: scale(2.5) skew(0deg, -14deg);
+    transform: scale(2.5) skew(0deg, -14deg); }
+
+  .splash-content {
+    transform: translateY(-80%);
+    display: flex; }
+
+  .biotec-logo-cont {
+    width: 100%; }
+
+  .biotic-logo {
+    width: 50%;
+    float: left; }
+
+  .biotec-splash-img {
+    width: 50%;
+    float: right; }
+
+  .biotec-mock {
+    width: 100%;
+    display: inline-block; }
+
+  .merch-cont {
+    width: 50%;
+    text-align: center;
+    float: left; }
+
+  .merch-cont img {
+    width: 100%;
+    transform: translateY(-40%);
+    float: left; }
+
+  .proj-desc {
+    transform: translateY(-45%);
+    width: 50%;
+    float: right; }
+
+  .biotec-section2 {
+    margin-top: 80px;
+    margin-bottom: 0px;
+    padding-top: 20px;
+    height: 100%;
+    background-image: linear-gradient(to top right, #08393B, #fff);
+    -moz-transform: scale(1.5) skew(0deg, -14deg);
+    -webkit-transform: scale(1.5) skew(0deg, -14deg);
+    -o-transform: scale(1.5) skew(0deg, -14deg);
+    -ms-transform: scale(1.5) skew(0deg, -14deg);
+    transform: scale(1.5) skew(0deg, -14deg);
+    text-align: center; }
+
+  .biotec-section2 img {
+    transform: skew(0deg, 14deg) !important;
+    display: block;
+    width: 50%;
+    margin-top: 25px; }
+
+  .biotec-footer {
+    position: relative;
+    overflow: hidden;
+    margin-top: 400px; } }
 @media (min-width: 1024px) {
   body {
     overflow-x: hidden; }
@@ -1439,7 +1677,11 @@ button {
     width: 35%; }
 
   .submit-button {
-    margin-bottom: 20px; } }
+    margin-bottom: 20px; }
+
+  .thermo-splash-txt {
+    width: 50%;
+    line-height: 20px; } }
 @media (min-width: 1200px) {
   body {
     overflow-x: hidden; }
@@ -1683,7 +1925,12 @@ button {
     margin-left: 0px; }
 
   .logo-txt {
-    text-align: left; } }
+    text-align: left; }
+
+  .biotec-footer {
+    clear: both;
+    position: relative;
+    margin-top: 500px; } }
 @media (min-width: 1920px) {
   body {
     overflow-x: hidden; }
