--- a/sass/modules/_thermo.scss
+++ b/sass/modules/_thermo.scss
@@ -21,7 +21,7 @@
     transform: translate(-40%, 0%);
 }
 
-.splash-txt {
+.thermo-splash-txt {
     width: 100%;
     line-height: 20px !important;
     margin-bottom: 30px;
