--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'modules/_wave';
 @import 'modules/_thermo';
 @import 'modules/_biotec';
+@import 'modules/_cricket';
 @import 'modules/_error';
 
 
