--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -701,6 +701,31 @@
         position: relative;
         overflow:hidden; 
     }
+    .cricket-splash {
+        background: url('/images/p-img/cricket-bg.png');
+        background-size: cover;
+        height: 100vh;
+        margin-top: -10%;
+        text-align: center;
+        align-items: center;
+       display: flex;
+       transform: scale(1.2);
+    
+    }
+    
+    .cricket-splash-img img {
+        width: 40%;
+        margin-bottom: 30px;
+    }
+    
+    .main-cont p {
+        margin-top: 50px;
+        font-size: .8rem;
+    }
+    .main-cont img{
+        width: 100%;
+    }
+    
 
 }
 
@@ -937,6 +962,30 @@
         position: relative;
         overflow:hidden;
         margin-top: 400px;
+    }
+    .cricket-splash {
+        background: url('/images/p-img/cricket-bg.png');
+        background-size: cover;
+        height: 100vh;
+        margin-top: -10%;
+        align-items: center;
+       margin-bottom: 50px;
+    
+    }
+    
+    .cricket-splash-img img {
+        width: 30%;
+        float: right;
+        transform: translate(-30%,10%);
+    }
+    
+    .cricket-splash-img h2 {
+        transform: translate(-10%,150%);
+        font-size: 2.5rem;
+    }
+    .main-cont p {
+        margin-top: 50px;
+        font-size: .8rem;
     }
     
 }
