--- a/public/css/main.css
+++ b/public/css/main.css
@@ -895,7 +895,7 @@ button {
 
   .form-cont {
     transform: translateY(25%);
-    height: 70%; }
+    height: 80%; }
 
   textarea {
     width: 100%;
@@ -1472,7 +1472,7 @@ button {
     display: block;
     position: relative;
     margin-top: 50px;
-    height: 50%;
+    height: 60%;
     padding: 30px; }
 
   .cont-header {
@@ -1731,11 +1731,12 @@ button {
     width: 400px; }
 
   .copyright {
-    height: 15vh; }
+    height: 15vh;
+    margin-bottom: 0; }
 
   .form-cont {
     width: 60%;
-    height: 55%; }
+    height: 60%; }
 
   .cont-header {
     width: 35%; }
