--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -176,7 +176,7 @@
     }
     .form-cont {
         transform: translateY(25%);
-        height: 70%;
+        height: 80%;
     }
     textarea {
         width: 100%;
@@ -471,6 +471,7 @@
     .top {
         margin-bottom: 30px;
     }
+
     .contact {
         margin-top: 30px;
     }
@@ -800,7 +801,7 @@
         display: block;
         position: relative;
         margin-top: 50px;
-        height: 50%;
+        height: 60%;
         padding: 30px;
     }
     .cont-header {
@@ -1088,10 +1089,11 @@
     }
     .copyright {
         height: 15vh;
+        margin-bottom: 0;
     }
     .form-cont {
         width: 60%;
-        height: 55%;
+        height: 60%;
     }
     .cont-header {
         width: 35%;
