--- a/public/css/main.css
+++ b/public/css/main.css
@@ -236,7 +236,7 @@ hr {
   margin-top: 30px; }
 
 .abt-img {
-  width: 40%;
+  width: 30%;
   float: left;
   margin-right: 10px; }
 
@@ -245,7 +245,7 @@ hr {
   margin-bottom: 60px; }
 
 .education {
-  margin-top: 30px; }
+  margin-top: 100px; }
 
 .edu {
   background-color: #fff;
@@ -738,6 +738,18 @@ button {
 .btn:active {
   background: #D98C43; }
 
+.demoreel {
+  text-align: center;
+  display: flex; }
+
+video {
+  display: block;
+  margin: 0 auto;
+  justify-content: center;
+  -webkit-box-shadow: 4px 10px 20px -6px #777;
+  -moz-box-shadow: 4px 10px 20px -6px #777;
+  box-shadow: 4px 10px 20px -6px #777; }
+
 @media (min-width: 320px) {
   body {
     overflow-x: hidden; }
@@ -890,7 +902,7 @@ button {
     overflow-y: scroll; }
 
   .copyright {
-    height: 8vh;
+    height: 10vh;
     padding-top: 30px; }
 
   .form-cont {
@@ -900,9 +912,6 @@ button {
   textarea {
     width: 100%;
     height: 200px; }
-
-  .copyright {
-    height: 10vh; }
 
   .wave-Header {
     margin-top: 20px;
@@ -1419,6 +1428,13 @@ button {
     float: left;
     margin-right: 10px; }
 
+  video {
+    margin-bottom: 50px;
+    z-index: 10; }
+
+  .edu {
+    margin-top: 170px; }
+
   .flex-cont {
     display: flex;
     flex-direction: row;
@@ -1729,6 +1745,9 @@ button {
 
   #p1 {
     width: 400px; }
+
+  .edu {
+    margin-top: 170px; }
 
   .copyright {
     height: 15vh;
