--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -171,7 +171,8 @@
         overflow-y: scroll;
     }
     .copyright {
-        height: 8vh;
+ 
+        height: 10vh;
         padding-top: 30px;
     }
     .form-cont {
@@ -181,9 +182,6 @@
     textarea {
         width: 100%;
         height: 200px;
-    }
-    .copyright {
-        height: 10vh;
     }
     .wave-Header {
         margin-top: 20px;
@@ -747,6 +745,13 @@
         float: left;
         margin-right: 10px;
     }
+    video {
+        margin-bottom: 50px;
+        z-index: 10;
+    }
+    .edu {
+        margin-top: 170px;
+    }
     .flex-cont {
         display: flex;
         flex-direction: row;
@@ -1086,6 +1091,9 @@
     }
     #p1 {
         width: 400px;
+    }
+    .edu {
+        margin-top: 170px;
     }
     .copyright {
         height: 15vh;
