--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -88,8 +88,13 @@
                     If I’m not designing or coding, I’m probably binge-watching TEDTalks or 90 Days Fiancé on YouTube.</p>
                 </div>
                 <hr>
-                <div class="demoreel">
-                    <iframe></iframe>
+                <div class="demoreel col-md-6 col-lg-6 clearfix">
+                    <video controls class="text-center" width="100%" class="mb-5">
+                        <source src="images/demoreel.mp4" type="video/mp4">
+                        <source src="images/demoreel.ogg" type="video/ogg">
+                        <source src="images/demoreel.webm" type="video/webm">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
             </div>
         </div> 
@@ -214,7 +219,6 @@
 <script type="module" src="js/main.js"></script>
 <!--<script type="module" src="js/lightbox.js"></script>-->
 <script type="module" src="js/burger-menu.js"></script>
-<script type="module" src="js/navOnScroll.js"></script>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
