--- a/views/contact-layout.hbs
+++ b/views/contact-layout.hbs
@@ -71,7 +71,7 @@
     <h1 class="d-none">Splash</h1>
     <div class="row splash">
          <div class="col-sm-12 col-lg-8 col-md-8 form-cont text-center">
-                <img src="images/contact-Header.svg" alt="Contact Form Header" class="cont-header">
+                <img src="images/Contact-Header.svg" alt="Contact Form Header" class="cont-header">
                 {{{body}}}
             </div>
     </div>
