--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -734,7 +734,8 @@
     }
 
     .abt-txt {
-        height: 50%;
+        height: 30%;
+        font-size: 1rem;
     }
     .abt-header {
         width: 30%;
@@ -1316,7 +1317,7 @@
         margin-bottom: 30px;
     }
     .abt-txt {
-        height: 60%;
+        height: 50%;
     }
     .abt-txt h1 {
         padding-top: 40px;
