--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -158,6 +158,7 @@
                     <p>Photoshop</p>
                     <p>Adobe Illustrator</p>
                     <p>Adobe InDesign</p>
+                    <p>Adobe XD</p>
                     <p>Adobe After Effects</p>
                     <p>Cinema 4D</p>
                     <p>GitHub</p>
