--- a/public/css/main.css
+++ b/public/css/main.css
@@ -661,7 +661,7 @@ nav {
   position: absolute; }
 
 h1 {
-  font-family: 'Made Saonara', sans-serif; }
+  font-family: 'Made Saonara', serif; }
 
 .main-logo {
   width: 50%;
@@ -1551,6 +1551,9 @@ video {
     width: 60%;
     margin-top: 140px; }
 
+  .thermo-splash-txt {
+    font-size: 1rem; }
+
   .sheet-cont {
     margin-top: 50px; }
 
@@ -1657,7 +1660,7 @@ video {
 
   .main-cont p {
     margin-top: 50px;
-    font-size: .8rem; } }
+    font-size: 1rem; } }
 @media (min-width: 1024px) {
   body {
     overflow-x: hidden; }
@@ -1766,7 +1769,10 @@ video {
 
   .thermo-splash-txt {
     width: 50%;
-    line-height: 20px; } }
+    line-height: 20px; }
+
+  .thermo-splash-txt p {
+    font-size: 1rem; } }
 @media (min-width: 1200px) {
   body {
     overflow-x: hidden; }
@@ -2015,7 +2021,10 @@ video {
   .biotec-footer {
     clear: both;
     position: relative;
-    margin-top: 500px; } }
+    margin-top: 500px; }
+
+  .thermo-splash-txt p {
+    font-size: 1rem; } }
 @media (min-width: 1920px) {
   body {
     overflow-x: hidden; }
