--- a/sass/main.scss
+++ b/sass/main.scss
@@ -158,7 +158,7 @@ button{
     display: flex;
 }
 
-video {
+.demoreel video {
     display: block;
     margin: 0 auto;
     justify-content: center;
