--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -245,7 +245,7 @@
     }
     
     .biotec-section2 {
-        height: 100%;
+        height: 60vh;
         background-image: linear-gradient(to top right,  #08393B,#fff);
         -moz-transform: scale(1.5) skew(0deg, -16deg);
         -webkit-transform: scale(1.5) skew(0deg, -16deg);
@@ -253,11 +253,12 @@
         -ms-transform: scale(1.5) skew(0deg, -16deg);
         transform: scale(1.5) skew(0deg, -16deg);
         text-align: center;
+        margin-top: 0px;
     }
     .biotec-section2 img {
         transform: skew(0deg, 16deg) !important; 
         display: block;
-        width: 110%;
+        width: 80%;
         margin-top: 25px;
     }
     
